fixing menu mobile gap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -772,6 +772,7 @@
         margin-left: 0;
         margin-top: 1rem;
         justify-content: flex-end;
+        padding-bottom: 1rem;
       }
       
       .cta {
